Major changes between version 2.0 and 2.0.1
------------------------------------------------
  - Added ICMP, ICMP6 and IGMP protocol and link rules.
  - Use ip to set and remove addresses if we have it and specify the
    netmask.


Major changes between version 1.0 and 2.0
------------------------------------------------
  - Common config stuff moved from /usr/lib/diald to /usr/share/diald
    so 2.0 can coexist with 1.0.
  - Major rewrite of much of the packet handling engine and related
    config options. Diald can now be configured to handle arbitrary
    protocols other than IPv4. If you have IPv6 in your kernel then
    every time a link comes up you should see an IPv6 router discovery
    in dctrl's connection window :-).


Major changes between version 0.99.5 and 1.0
------------------------------------------------
  - Use openpty to get a pseudo terminal if it is available.
  - Added Makefile rule to build RPMs.
  - Changed to use GNU autoconf.
  - Added config save/restore to dctrl. Patch from someone but
    I forget who. If it was you please tell me!
  - Handle dynamic changes of netmask.
  - Fix check for first packet between firewall.c and filter.c
  - Only compile TCP_CORK code if TCP_CORK is defined.


Major changes between version 0.99.4 and 0.99.5.
------------------------------------------------
  - Use TCP_CORK on monitor output (if available) to make sure we
    keep the number of packets to a minimum.
  - Fixed a %d which should have been a %s in a debug message.
  - Handle a down request received between starting the protocol
    and the interface becoming available for traffic.
  - If we are running in "sticky" mode we should replace the
    original addresses with those allocated *after* we have taken
    the stopped the proxy.
  - Added save of netmask in "sticky" mode as well as local, remote
    and broadcast addresses.


Major changes between version 0.99.3 and 0.99.4.
------------------------------------------------