@@ -1,5 +1,10 @@
 Major changes between version 2.0 and 2.0.1
 ------------------------------------------------
+  - Timeouts now take an optional colon followed by a second
+    number. The second number is how much longer to keep the
+    connection in the connection queue after its timeout has
+    reached zero. This allows traffic that does not hold the
+    link up to be seen in the monitor's connection queue display.
   - Added ICMP, ICMP6 and IGMP protocol and link rules.
   - Use ip to set and remove addresses if we have it and specify the
     netmask.
